# ec2-automator

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  job_description.txt  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  background.py  config.py  endpoints.py  logging_config.py  main.py  models.py  tasks.py
app/aws/: ec2.py  ses.py
docs/: AWS_SETUP_GUIDE.md  COMMANDS_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  ISSUES.md  JENKINS_SETUP.md  PROJECT_PHASES.md  PROJECT_STRUCTURE.md
jenkins/: Jenkinsfile.build  Jenkinsfile.lint  Jenkinsfile.push  Jenkinsfile.setup  Jenkinsfile.test  PIPELINE_SETUP.md  QUICK_CONFIG.md  README.md
scripts/: README.md  cleanup-aws-resources.sh  cleanup-docker.sh  cleanup-local-deployment.sh  test_api.sh
tests/: conftest.py
tests/integration/: test_ec2_integration.py  test_ses_integration.py
tests/unit/: test_endpoints.py  test_models.py
uml/: README.md  TESTING.md
uml/diagrams/: README.md  generate_architecture.py
uml/jenkins/: Jenkinsfile.diagrams  README.md  generate_all_diagrams.sh
uml/mermaid/: README.md  class_diagram.md  component_diagram.md  sequence_diagram.md
uml/plantuml/: README.md  activity_background.puml  class_models.puml  component_architecture.puml  deployment_aws.puml  generate.sh  sequence_launch.puml
uml/py2puml/: README.md  generate.sh
uml/pydeps/: README.md  generate.sh
uml/pyreverse/: README.md  classes_source.dot  generate.sh  packages_ec2_automator_dot.dot
