[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ec2-automator"
version = "0.1.0"
description = "Minimalist REST API for provisioning AWS Free Tier EC2 instances"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Enrique Coello", email = "enrique.coello@gmail.com"}
]

dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "boto3==1.36.5",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.6.8",
    "black==24.10.0",
    "moto==4.2.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "venv", "__pycache__", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '\.venv|venv'

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]
